# 5IABD-gestion-projet-data

./: .env.example  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  app_test.py  main.py
src/application/services/: calendar_service.py  chat_service.py
src/core/: config.py  logger.py
src/domain/entities/: event.py  message.py  task.py
src/domain/interfaces/: repositories.py
src/domain/repositories/: event_repository.py
src/infrastructure/database/: postgres.py  postgres_event_repository.py
src/infrastructure/llm/: openai.py
src/interfaces/api/: dependencies.py
src/interfaces/api/routes/: chat.py  events.py
src/interfaces/api/schemas/: models.py
src/interfaces/ui/: streamlit_app.py
